# AnkIA

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  test_bug.py  test_bug2.py  test_output.txt  widget.py
.streamlit/: config.toml
ankia/utils/: anki_manager.py  context_manager.py  ollama_client.py
decks/: .gitkeep  Adjetivos C1 Español-Ingles.txt  Adjetivos Ingles-Español.txt  Clases Aleman Junio.txt  Conectores Aleman.txt  Sustantivos Ingles-Español.txt  Vocab Aleman.txt  Vocabulario CY1.txt  metadata.json
utils/: __init__.py  context_manager.py  ollama_client.py
